2010-07-21  Beth Dakin  <bdakin@apple.com>

        Reviewed by Dan Bernstein.

        Some of these layout tests are updated results from the fix for 
        https://bugs.webkit.org/show_bug.cgi?id=42605 New border-
        radius path-based drawing code has some issues with corner-joins. 
        The others have been in need of an update since 
        https://bugs.webkit.org/show_bug.cgi?id=9197 , but since the 
        differences were only detectable visually and with a pixel-text 
        tolerance of 0 (not the default), they slipped under the rug until 
        now.

        New test:
        * fast/borders/different-color-borders.html: Added.
        * platform/mac/fast/borders/border-radius-circle-expected.checksum:
        * platform/mac/fast/borders/border-radius-circle-expected.png:

        * platform/mac/fast/borders/border-radius-constraints-expected.checksum:
        * platform/mac/fast/borders/border-radius-constraints-expected.png:
        * platform/mac/fast/borders/border-radius-groove-01-expected.checksum:
        * platform/mac/fast/borders/border-radius-groove-01-expected.png:
        * platform/mac/fast/borders/border-radius-groove-02-expected.checksum:
        * platform/mac/fast/borders/border-radius-groove-02-expected.png:
        * platform/mac/fast/borders/border-radius-groove-03-expected.checksum:
        * platform/mac/fast/borders/border-radius-groove-03-expected.png:
        * platform/mac/fast/borders/border-radius-huge-assert-expected.checksum:
        * platform/mac/fast/borders/border-radius-huge-assert-expected.png:
        * platform/mac/fast/borders/border-radius-wide-border-02-expected.checksum:
        * platform/mac/fast/borders/border-radius-wide-border-02-expected.png:
        * platform/mac/fast/borders/border-radius-wide-border-03-expected.checksum:
        * platform/mac/fast/borders/border-radius-wide-border-03-expected.png:
        * platform/mac/fast/borders/border-radius-wide-border-04-expected.checksum: