@@ -1,0 +1,6 @@
+This page contains the following errors:
+
+error on line 19 at column 92: Comment must not contain '--' (double-hyphen)
+Below is a rendering of the page up to the first error.
+
+This test passes if a malformed html document triggers an error, not crash.
