@@ -1,0 +1,19 @@
+<html>This test passes if a malformed html document triggers an error, not crash.
+  <svg xmlns="http://www.w3.org/2000/svg"
+      xmlns:xlink="http://www.w3.org/1999/xlink"
+      onload="restyle()">
+    <script>
+    if (window.layoutTestController)
+        layoutTestController.dumpAsText();
+    function restyle() {
+        document.getElementById("b").style.position = "absolute";
+    }
+    </script>
+    <defs>
+        <g id="a" />
+    </defs>
+    <g id="b">
+        <use xlink:href="#a" />
+    </g>
+  </svg>
+<!-- no closing html tag --->
